Ajusta código da parte do deck
